--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from '../components/layout/Header.astro';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,9 +10,16 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+		<link rel="stylesheet" href="/src/styles/globals.css" />
+
+		{/* Google Fonts: adjust families/weights as needed */}
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<slot />	
 	</body>
 </html>
 
