--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<h1 class="hero-main-text p-8">Hello World</h1>
 </Layout>
