--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
   /* Font families */
   --font-sans: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Helvetica Neue', Arial, 'Noto Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', sans-serif;
   --font-mono: 'JetBrains Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  --font-roboto-mono: 'Roboto Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 }
 
 html,
@@ -65,6 +66,15 @@ body {
   color: #ffffff;
 }
 
+
+.fake-bold {
+  font-weight: 800; /* o 700 */
+  -webkit-text-stroke: 2.0px currentColor;
+}
+
+.font-roboto-mono {
+  font-family: var(--font-roboto-mono);
+}
 /* Example usage override
 html { font-family: 'MyLocalSans', var(--font-sans); }
 code, pre { font-family: 'MyLocalMono', var(--font-mono); }
