Add AboutSection and TechnologyCarousel components; update Layout and index page to include new sections and improve header styling.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import HeroSection from '../sections/HeroSection.astro';
+import AboutSection from '../sections/AboutSection.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
 	<HeroSection />
+	<AboutSection />
 </Layout>
