--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -27,10 +27,13 @@
 
 <style>
 .site-header {
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 10;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   padding-top: 10px;
+  width: 100%;
 }
 
 .wrap {
