--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,12 @@ import Header from '../components/layout/Header.astro';
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;600&family=Roboto+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 	</head>
-	<body>
+	<body class="relative">
+		
 		<Header />
-		<slot />	
+		<main class="main-content">
+			<slot />	
+		</main>
 	</body>
 </html>
 
@@ -30,4 +33,9 @@ import Header from '../components/layout/Header.astro';
 		width: 100%;
 		height: 100%;
 	}
+
+	.main-content {
+		padding-top: 80px; /* Account for fixed header height */
+	}
+
 </style>
