--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import HeroSection from '../sections/HeroSection.astro';
 import AboutSection from '../sections/AboutSection.astro';
+import ExperienceSection from '../sections/ExperienceSection.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
 	<HeroSection />
 	<AboutSection />
+	<ExperienceSection />
 </Layout>
