Revamp portfolio structure and content; replace README with portfolio details, enhance ExperienceCard with detailed experience data, and add new sections for Projects and Contact. Update HeroSection and AboutSection for improved layout and styling.

--- a/src/components/layout/TechnologyCarousel.astro
+++ b/src/components/layout/TechnologyCarousel.astro
@@ -1,10 +1,9 @@
 ---
 import TechnologiesCarousel from "./TechnologyItem.astro";
 
-// Definir los servicios con sus iconos SVG
 const technologies = [
     {
-        label: "Angualar",
+        label: "Angular",
         svg: `<svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M0 0H60V60H0V0Z" fill="url(#pattern0_154_13)"/>
 <defs>
