--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import HeroSection from '../sections/HeroSection.astro';
 import AboutSection from '../sections/AboutSection.astro';
 import ExperienceSection from '../sections/ExperienceSection.astro';
+import ProjectsSection from '../sections/ProjectsSection.astro';
+import ContactSection from '../sections/Contact.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -9,4 +11,6 @@ import Layout from '../layouts/Layout.astro';
 	<HeroSection />
 	<AboutSection />
 	<ExperienceSection />
+	<ProjectsSection />
+	<ContactSection />
 </Layout>
