--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,7 +7,7 @@
     <div class="nav-bar">
       <ul class="menu">
         <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
+        <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Featured Projects</a></li>
       </ul>
       <div class="actions">
