--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/layout/Header.astro';
+import '../styles/globals.css';
 ---
 
 <!doctype html>
@@ -10,7 +11,6 @@ import Header from '../components/layout/Header.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Jiir Paredes | Software Engineer</title>
-		<link rel="stylesheet" href="/src/styles/globals.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
