--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -21,7 +21,7 @@
 
       <!-- Actions -->
       <div class="flex items-center gap-2.5 md:gap-2.5">
-        <div class="inline-grid grid-flow-col items-center gap-1 px-1 py-0.5 md:px-1.5 md:py-0.5 border border-white/[0.18] bg-black/25 rounded-xl" role="group" aria-label="Language">
+        <div class="cursor-pointer inline-grid grid-flow-col items-center gap-1 px-1 py-0.5 md:px-1.5 md:py-0.5 border border-white/[0.18] bg-black/25 rounded-xl" role="group" aria-label="Language">
           <span class="lang-option active text-[#0f0f10] font-sink font-medium text-[10px] md:text-[11px] leading-none px-1.5 py-1 md:px-2.5 md:py-1.5 rounded-lg transition-all duration-300 bg-[#e6e6e6]">EN</span>
           <span class="lang-option text-[#cfcfcf] font-sink font-medium text-[10px] md:text-[11px] leading-none px-1.5 py-1 md:px-2.5 md:py-1.5 rounded-lg transition-all duration-300">SP</span>
         </div>
