--- a/src/components/layout/TechnologyCarousel.astro
+++ b/src/components/layout/TechnologyCarousel.astro
@@ -69,7 +69,16 @@ const technologies = [
 ];
 ---
 
-<div class="flex gap-8 justify-center items-center">
+<div class="flex gap-6 md:gap-8 justify-start md:justify-center items-center px-4 md:px-8 overflow-x-auto scrollbar-hide">
+    <style>
+        .scrollbar-hide {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        .scrollbar-hide::-webkit-scrollbar {
+            display: none;
+        }
+    </style>
     {
         technologies.map((technology) => (
             <TechnologiesCarousel
